--- a/style.css
+++ b/style.css
@@ -99,13 +99,13 @@ main{
 @media only screen and (max-width:520px){
     .banner{
         height: 135px;
-        width: 100vw;
+        width: 100%;
     }
 }
 @media only screen and (min-width:521px) and (max-width:810px){
     .banner{
         height: 120px;
-        width: 100vw;
+        width: 100%;
     }
 }
 /*Second Section*/
