--- a/style.css
+++ b/style.css
@@ -95,7 +95,9 @@ main{
     z-index:1;
     opacity: 0.9;
 }
-.banner h2, .banner h4margin:0 auto;
+.banner h2, .banner h4{
+    margin:0 auto;
+}
 @media only screen and (max-width:520px){
     .banner{
         height: 135px;
