--- a/style.css
+++ b/style.css
@@ -95,32 +95,38 @@ main{
     z-index:1;
     opacity: 0.9;
 }
-
+.banner h2, .banner h4{
+    margin:0 auto;
+}
 @media only screen and (max-width:520px){
     .banner{
         height: 135px;
-        width: 100vw;
+        width: 100%;
     }
 }
 @media only screen and (min-width:521px) and (max-width:810px){
     .banner{
         height: 120px;
-        width: 100vw;
+        width: 100%;
     }
 }
 /*Second Section*/
 
 .second-section{
     position:relative;  
-    margin-bottom:60px;  
+    margin:0 auto 0px auto;
+
 }
 
 .flex{
+    position: relative;
     display: flex;
+    flex-flow: wrap;
+    flex-wrap: wrap;
     width: 1000px;
     margin: 0px auto;
     gap:40px;
-    flex-wrap: wrap;
+    align-content:space-between;
     justify-content: center;
 }
 
@@ -129,13 +135,7 @@ main{
     height:200px;
     margin-bottom: 10px;
 }
-.card{
 
-    margin: 0px 0px;
-    flex-grow: 0;
-    flex-shrink: 0;
-
-}
 
 .card:hover {
     transform: scale(1.1);
@@ -148,11 +148,10 @@ p{
 /*Third Section*/
 .third-section{
     height:500px;
-    display: flex;
     align-items: center;
-    margin: 250px auto;
+    margin: 50px auto 250px  auto;
     height: 570px;
-    width: 1200px;
+    width: 100vw;
 }
 
 .address{
@@ -164,12 +163,12 @@ p{
     display: flex;
     flex-flow:row wrap;
     align-items: center;
-    width: 1000px;
+    width: 100vw;
     margin: 0px auto;
     gap:40px;
     display: inline-flex;
     justify-content: space-evenly;
-    gap:10px;
+
 }
 
 .location-card{
@@ -206,4 +205,13 @@ footer{
     height:200px;
     width:100%;
     text-align: center;
+    margin: auto auto;
+}
+footer section h2, footer section h5{
+    margin:20px auto;
+}
+
+#copyright{
+    float: left;
+    margin-left: 20px;
 }
