--- a/style.css
+++ b/style.css
@@ -96,20 +96,10 @@ main{
     opacity: 0.9;
 }
 .banner h2, .banner h4{
-    margin:0 auto;
+    margin:auto auto;
+    padding-top: 5px;
 }
-@media only screen and (max-width:520px){
-    .banner{
-        height: 135px;
-        width: 100%;
-    }
-}
-@media only screen and (min-width:521px) and (max-width:810px){
-    .banner{
-        height: 120px;
-        width: 100%;
-    }
-}
+
 /*Second Section*/
 
 .second-section{
